--- a/machine_learning_engineering.ipynb
+++ b/machine_learning_engineering.ipynb
@@ -2,45 +2,113 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "qghfFzfIOaNm"
-   },
+   "metadata": {},
    "source": [
-    "# Assignment 1:\n",
-    "In this assignment you will practice putting together a simple machine learning pipeline and to implement the K-nearest neighbor algorithm. You will familiairze yourselves with different python libraries (scikit-learn, matplotlib, pandas) that are helpful tools for machine learning."
+    "# Iris Flower Spicies Classification Project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Project Definition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.1 Author: Richard Mfitumukiza"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2 Goals\n",
+    "The Iris flower data set is a multivariate data set introduced by the British statistician and biologist Ronald Fisher in his 1936 paper: The use of multiple measurements in taxonomic problems.  \n",
+    "It is sometimes called Anderson's Iris data set because Edgar Anderson collected the data to quantify the morphologic variation of Iris flowers of three related species.  \n",
+    "The data set consists of 50 samples from each of three species of Iris (Iris Setosa, Iris virginica, and Iris versicolor). Four features were measured from each sample: the length and the width of the sepals and petals, in centimeters..[link](https://archive.ics.uci.edu/ml/datasets/Iris)  \n",
+    "\n",
+    "**The goal of this project is to learn how to use machine learning in pattern recognition; by correctly classifying each flower data entry.**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.3 Objectives\n",
+    "The objective is to use Machine Learning to create a model that classifies given flowers into their respective spicies; based on the dataset  available on [UCI Machine Learning Repository](https://archive.ics.uci.edu/ml/datasets/Iris).  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "khqCyUn_OaNn"
+    "tags": []
    },
    "source": [
-    "## 1. Preparing the data\n",
-    "\n",
-    "In this assignment we will use the Iris Flower Species Dataset. This dataset consists of 3 different types of irise species (Setosa, Versicolour, and Virginica) where we have the following measures for each flower sample: the petal length, the sepal length, the petal width, the sepal width.\n",
-    "\n",
-    "Below is an example.\n",
-    "\n",
-    "\n"
+    "### 1.4 Requirements\n",
+    "I am required to:\n",
+    "- use UCI Machine Learning Iris [dataset](https://archive.ics.uci.edu/ml/datasets/Iris),\n",
+    "- create a machine learning model,\n",
+    "- run a classification on the dataset\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Gg8psoYLytNh"
-   },
+   "metadata": {},
    "source": [
-    "![Drag Racing](https://www.integratedots.com/wp-content/uploads/2019/06/iris_petal-sepal-e1560211020463.png)"
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "-Mb_MGnXzUxr"
-   },
+   "metadata": {},
    "source": [
-    "This data is stored in a 150x4 numpy array, where 150 is the number of sample flowers and 4 is the measured features for each.  Go through the following steps to download the data."
+    "## 2. Project Planning Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1 Work breakdown\n",
+    "- use UCI Machine Learning Iris [dataset](https://archive.ics.uci.edu/ml/datasets/Iris),\n",
+    "    - Download dataset from UCI Machine Learning Data Repository to local machine\n",
+    "    - Prepare dataset and make it ready for usage in subsequent steps\n",
+    "- create a machine learning model,\n",
+    "    - Exploratory Data Analysis\n",
+    "        - Raw data exploration\n",
+    "        - Feature engineering\n",
+    "        - Analysis\n",
+    "    - Machine Learning Modelling\n",
+    "        - Split into train, validate, test sets\n",
+    "        - train models\n",
+    "- run a classification on the dataset\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 Resources identification\n",
+    "- Links\n",
+    "    - context: https://www.kaggle.com/uciml/iris\n",
+    "    - dataset: https://archive.ics.uci.edu/ml/datasets/Iris"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Execution : Data science"
    ]
   },
   {
@@ -54,6 +122,34 @@
     "id": "CpxSlYFJzk9e",
     "outputId": "a0b85a4c-10a7-497e-95e5-9b080d34c89b"
    },
+   "outputs": [],
+   "source": [
+    "from sklearn import datasets\n",
+    "import pandas as pd\n",
+    "\n",
+    "iris = datasets.load_iris()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pictorial representation of the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "Gg8psoYLytNh"
+   },
+   "source": [
+    "![Drag Racing](https://www.integratedots.com/wp-content/uploads/2019/06/iris_petal-sepal-e1560211020463.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -182,16 +278,12 @@
        "[150 rows x 4 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn import datasets\n",
-    "import pandas as pd\n",
-    "\n",
-    "iris = datasets.load_iris()\n",
     "\n",
     "# We use pandas dataframe to see the table\n",
     "df = pd.DataFrame(iris.data, columns=iris.feature_names)\n",
@@ -200,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -221,7 +313,7 @@
        "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,16 +325,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "GsrXTiOA0Pg9"
-   },
+   "metadata": {},
    "source": [
     "We use pandas dataframe to see the statistics of this data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -362,7 +452,7 @@
        "max            2.500000  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,12 +467,13 @@
     "id": "U7ZqoZd5ziX-"
    },
    "source": [
-    "In this assignment we only use the first two features (sepal length and width) for easier visualization. We also split the dataset into 2 cohorts for training and testing."
+    "- using sepal length (cm) and sepal width (cm) only for easier visualization\n",
+    "- data split into training and testing sets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -397,7 +488,7 @@
        "((120, 2), (30, 2))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -476,18 +567,16 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "-K9FSFSEOaNw"
+    "id": "-K9FSFSEOaNw",
+    "tags": []
    },
    "source": [
-    "## 2. Implemeting K-Nearest Neighbors\n",
-    "Now we want to implement the K-nearest neighbor algorithm. \n",
-    "\n",
-    "(2pts) Fill in the code block below for calculating the distance between two vectors."
+    "## 2. Implemeting K-Nearest Neighbors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "id": "6ghmx_E6OaNw"
    },
@@ -510,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -525,7 +614,7 @@
        "1.0770329614269007"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,12 +640,12 @@
     "id": "SbRG8WEkOaNz"
    },
    "source": [
-    "Then we calculate the euclidean distance to a test example"
+    "Then I calculate the euclidean distance to a test example"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -602,16 +691,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "EaNEdUjnOaN2"
-   },
+   "metadata": {},
    "source": [
-    "We can calculate the distance for all the pairs of test examples. For example, if there are **Ntr** training examples and **Nte** test examples, this stage should result in a **Nte x Ntr** matrix where each element (i,j) is the distance between the i-th test and j-th train example."
+    "Identifying data importance in classification based on euclidean distance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -627,7 +714,7 @@
        "Text(0, 0.5, 'Test examples id')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -663,33 +750,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "05kZYs6cOaN5"
-   },
-   "source": [
-    "### Question 1\n",
-    "\n",
-    "Notice the structured patterns in the distance matrix, where some rows or columns are visible brighter.\n",
-    "\n",
-    "1. (2 pts) Which training examples are probably more important for test predictions in a K nearest neighbor classifier? Why? \n",
-    "2. (2 pts) Which test examples are closer to most of the training examples?\n",
-    "\n",
-    "$\\color{blue}{\\textit Your Answer:}$ *fill this in.*\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "m3uoas5mr9tI"
-   },
-   "source": [
-    "Q1.1) training examples close to the test examples are more important than outliers ( those wich are far from the test examples) \n",
-    "\n",
-    "Q1.2) test examples with id from 5 to about 22 are the closest to most of the training examples."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "722jHcoEOaN6"
    },
    "source": [
@@ -699,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -714,7 +774,7 @@
        "KNeighborsClassifier()"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,13 +793,12 @@
     "id": "HZxTcu_hOaN9"
    },
    "source": [
-    "Let's pick a sample from our test set. Now we want to find the 5 closest neighbors of this sample from the training set. Complete the code segment below to find these samples and print out their features (hint: use kneighbors method for KNeighborsClassifier https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.KNeighborsClassifier.html) (2 pts)\n",
-    "\n"
+    "Let's pick a sample from our test set. Now we want to find the 5 closest neighbors of this sample from the training set. Complete the code segment below to find these samples and print out their features (hint: use kneighbors method for KNeighborsClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -800,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "id": "x7BAHGbHOaOB"
    },
@@ -817,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -833,7 +892,7 @@
        "Text(0, 0.5, 'Sepal width')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -892,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -926,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "id": "4NyxYakRcCE6"
    },
@@ -940,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "id": "P2l3Uyt5OaOK"
    },
@@ -962,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -978,7 +1037,7 @@
        "Text(0, 0.5, 'Test set accuracy')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1005,67 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "yMMopS-mYnd9"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "sSOeFBfrOaOP"
-   },
-   "source": [
-    "### Question 2\n",
-    "\n",
-    "See from the graph and answer the following questions:\n",
-    "\n",
-    "1. Which k gives the best test set accuracy? (2 pts)\n",
-    "2. When k becomes larger and close to size of the training set, the test set accuracy drops. Why is that? (4 pts)\n",
-    "\n",
-    "$\\color{blue}{\\textit Your Answer:}$ *fill this in.*\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "fRkX0LRwsdkA"
-   },
-   "source": [
-    "Q2.1) K(approximation) that gave the best accuracy are the following: 30, 42, 47, 58\n",
-    "\n",
-    "Q2.2) because of overfitting."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "IxPJg58UdGBP"
-   },
-   "source": [
-    "### Question 3\n",
-    "\n",
-    "1. Train a KNN classifier for the iris data, but this time use all 4 features instead of only\n",
-    "\n",
-    "2. Report on the performance of the model and explain why it is better or worse. What differences do you observe? (10 pts)\n",
-    "\n",
-    "$\\color{blue}{\\textit Your Answer:}$ *fill this in.*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "uJHEDOfTlyZe"
-   },
-   "source": [
-    "It is my observation that at the same K value(number of features), the KNN model predicted with higher accurace when provided 4 features than 2 features, to generalize, KNN algorithms works better with more features or at least with a critical amount of features depending on the type of data. Considering our case, it is clear that petal measurements made a big difference, even on K value 1."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1202,7 +1201,7 @@
        "[150 rows x 4 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1213,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1228,7 +1227,7 @@
        "((120, 4), (30, 4))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1245,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1260,7 +1259,7 @@
        "KNeighborsClassifier()"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1273,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1289,7 +1288,7 @@
        "       0, 2, 2, 2, 2, 2, 0, 0])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1301,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1316,7 +1315,7 @@
        "1.0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1327,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "id": "zieSDaTblSeG"
    },
@@ -1349,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1365,7 +1364,7 @@
        "Text(0, 0.5, 'Test set accuracy')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1389,15 +1388,6 @@
     "plt.xlabel('Number of nearest neighbors (k)')\n",
     "plt.ylabel('Test set accuracy')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "gN-HASVKov3j"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
